--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -16,7 +15,7 @@
         обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link" target="_blank">Узнать&rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Яндекс Практикум">
-      <div class="header__square-pic">
+      <div class="header__square-pic rotation">
       </div>
     </header>
     <main class="content">
@@ -35,6 +34,69 @@
                 на примере обучения в Практикуме.</p>
           </div>
         </article>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-attention.png" alt="Книга">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-recall.png" alt="Скульптура">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-interliving.png" alt="Люди">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-question.png" alt="Задумчивый человек">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="images/cards-competence.png" alt="Книги">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
+          title="The first 20 hours -- how to learn anything | Josh Kaufman | TEDxCSU"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"
+          title="Tim Urban: Inside the mind of a master procrastinator | TED" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала
+               себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский
+                язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для
+                продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой
+                подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом
+                знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </article>
+      </section>
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="#" class="feynman__link" target="_blank">Подробнее&rarr;</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -77,10 +139,20 @@
           </li>
         </ul>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link" target="_blank">Подробнее&rarr;</a>
+      <section class="khan">
+        <article class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
+            по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся
+            повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+        </article>
+        <article class="khan__book-container">
+          <img class="khan__book-pic" src="images/khan-book.jpg" alt="Книга &laquo;Весь мир — школа&raquo;">
+          <a class="khan__buy-link" href="#" target="_blank">Купить книгу&rarr;</a>
+        </article>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -128,7 +200,21 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-          <div class="kaufman__triangle"></div>
+          <div class="kaufman__triangle rotation"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a class="resources__link" href="#" target="_blank">
+            <img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Arzamas"></a>
+          <a class="resources__link" href="#" target="_blank">
+            <img class="resources__logo" src="images/logo/resources-n1.svg" alt="N1"></a>
+          <a class="resources__link" href="#" target="_blank">
+            <img class="resources__logo" src="images/logo/resources-strelka.svg" alt="STRELKA"></a>
+          <a class="resources__link" href="#" target="_blank">
+            <img class="resources__logo" src="images/logo/resources-polka.svg" alt="ПОЛКА"></a>
+        </div>
       </section>
     </main>
     <footer class="footer">
@@ -150,13 +236,13 @@
             <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li><a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Иконка YouTube">YouTube
+              <img class="footer__social-icon" src="images/youtube-icon.svg" alt="Иконка YouTube">YouTube
             </a></li>
             <li><a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Иконка ВКонтакте">ВКонтакте
+              <img class="footer__social-icon" src="images/vk_color_white.svg" alt="Иконка ВКонтакте">ВКонтакте
             </a></li>
             <li><a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="Иконка TikTok">TikTok
+              <img class="footer__social-icon" src="images/tiktok-icon.svg" alt="Иконка TikTok">TikTok
             </a></li>
           </ul>
         </nav>
