--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к
         обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link" target="_blank">Узнать&rarr;</a></p>
+        <a href="#" class="header__link link-hover" target="_blank">Узнать&rarr;</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Яндекс Практикум">
       <div class="header__square-pic rotation">
       </div>
@@ -96,7 +96,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link" target="_blank">Подробнее&rarr;</a>
+        <a href="#" class="feynman__link link-hover" target="_blank">Подробнее&rarr;</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -151,7 +151,7 @@
           </div>
         <div class="khan__book-container">
           <img class="khan__book-pic" src="images/khan-book.jpg" alt="Книга &laquo;Весь мир — школа&raquo;">
-          <a class="khan__buy-link" href="#" target="_blank">Купить книгу&rarr;</a>
+          <a class="khan__buy-link link-hover" href="#" target="_blank">Купить книгу&rarr;</a>
         </div>
       </article>
       <section class="kaufman">
@@ -206,13 +206,13 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a class="resources__link" href="#" target="_blank">
+          <a class="resources__link link-hover" href="#" target="_blank">
             <img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Арзамас"></a>
-          <a class="resources__link" href="#" target="_blank">
+          <a class="resources__link link-hover" href="#" target="_blank">
             <img class="resources__logo" src="images/logo/resources-n1.svg" alt="Н1"></a>
-          <a class="resources__link" href="#" target="_blank">
+          <a class="resources__link link-hover" href="#" target="_blank">
             <img class="resources__logo" src="images/logo/resources-strelka.svg" alt="СТРЕЛКА"></a>
-          <a class="resources__link" href="#" target="_blank">
+          <a class="resources__link link-hover" href="#" target="_blank">
             <img class="resources__logo" src="images/logo/resources-polka.svg" alt="ПОЛКА"></a>
         </div>
       </section>
@@ -227,21 +227,21 @@
         <nav class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#">Главная</a></li>
-            <li><a class="footer__column-link" href="#">Концепция</a></li>
-            <li><a class="footer__column-link" href="#">Наставники</a></li>
+            <li><a class="footer__column-link link-hover" href="#">Главная</a></li>
+            <li><a class="footer__column-link link-hover" href="#">Концепция</a></li>
+            <li><a class="footer__column-link link-hover" href="#">Наставники</a></li>
           </ul>
         </nav>
         <nav class="footer__column footer__column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
-            <li><a class="footer__column-link" href="#">
+            <li><a class="footer__column-link link-hover" href="#">
               <img class="footer__social-icon" src="images/youtube-icon.svg" alt="Иконка YouTube">YouTube
             </a></li>
-            <li><a class="footer__column-link" href="#">
+            <li><a class="footer__column-link link-hover" href="#">
               <img class="footer__social-icon" src="images/vk_color_white.svg" alt="Иконка ВКонтакте">ВКонтакте
             </a></li>
-            <li><a class="footer__column-link" href="#">
+            <li><a class="footer__column-link link-hover" href="#">
               <img class="footer__social-icon" src="images/tiktok-icon.svg" alt="Иконка TikTok">TikTok
             </a></li>
           </ul>
