--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к
         обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link link-hover" target="_blank">Узнать&rarr;</a></p>
-      <img class="header__main-illustration" src="./images/header-image.png" alt="Яндекс Практикум">
+      <img class="header__main-illustration" src="./images/header-image.png" alt="часть репродукции картины Решетникова &#171;Опять двойка&#187;">
       <div class="header__square-pic rotation">
       </div>
     </header>
@@ -80,8 +80,8 @@
           allowfullscreen></iframe>
         </div>
       </section>
-      <article class="oakley">
-        <div class="two-columns">
+      <section class="oakley" aria-label="oakley">
+        <article class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала
@@ -91,8 +91,8 @@
                 подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом
                 знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
-        </div>
-      </article>
+        </article>
+      </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
@@ -139,21 +139,21 @@
           </li>
         </ul>
       </section>
-      <article class="khan">
-        <div class="khan__container">
+      <section class="khan" aria-label="khan">
+        <article class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
           <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
             по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся
             повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-          <p class="khan__quote-author">Джордж Лукас</p>
+          <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
-          </div>
+        </article>
         <div class="khan__book-container">
           <img class="khan__book-pic" src="images/khan-book.jpg" alt="Книга &laquo;Весь мир — школа&raquo;">
           <a class="khan__buy-link link-hover" href="#" target="_blank">Купить книгу&rarr;</a>
         </div>
-      </article>
+      </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
@@ -222,7 +222,7 @@
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer">
           </div>
-          <p class="footer__author">&copy; Виктор Абанькин</p>
+          <p class="footer__author">&copy; Студнева Карина</p>
         </div>
         <nav class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
